tests/ui/inline-const/pat-match-fndef.stderr
warning: the feature `inline_const_pat` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/pat-match-fndef.rs:1:12
   |
LL | #![feature(inline_const_pat)]
   |            ^^^^^^^^^^^^^^^^
   |
   = note: see issue #76001 <https://github.com/rust-lang/rust/issues/76001> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: `fn() {uwu}` cannot be used in patterns
  --> $DIR/pat-match-fndef.rs:9:9
   |
LL |         const { uwu } => {}
   |         ^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

